--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Rdio - Luke Chesser</title>
-
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+		<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/reset.css"/>
 		<link rel="stylesheet" href="css/global.css"/>
 	</head>
-	<body>
+	<body class="container">
 		<header>
 			<div class="wrapper">
 				<div class="logo-search">
@@ -22,137 +25,141 @@
 				</div>
 			</div>
 		</header>
-		<aside>
-			<h3>Browse</h3>
-			<nav class="browse">
-				<ul class="main">
-					<li><a class="heavy" href="#">Heavy Rotation</a></li>
-					<li><a class="recent" href="#">Recent Activity</a></li>
-					<li><a class="top" href="#">Top Charts</a></li>
-					<li><a class="new" href="#">New Releases</a></li>
-				</ul>
-			</nav>
-			<h3>Your music</h3>
-			<nav class="music">
-				<ul class="main">
-					<li><a class="collection" href="#">Collection</a></li>
-					<li><a class="history" href="#">History</a></li>
-				</ul>
-			</nav>
-		</aside>
 
-		<main>
-			<header>
-				<div class="name-photo">
-					<aside>
-						<img src="img/artist.png" />
-					</aside>
-					<div class="name">
-						<h1>Luke Chesser</h1>
-						<p>Montreal, Quebec, Canada <a href="https://www.facebook.com/" target="_blank"><img class="share" src="img/icon/fb.png" /></a><a href="https://twitter.com/" target="_blank"><img class="share" src="img/icon/twitter.png" /></a></p>
-					</div>
-				</div>
-				<div class="stats-links">
-					<section class="stats">
-						<span>2 Playlists</span>
-						<span>4 Reviews</span>
-						<span>6 Followers</span>
-						<span>13 Following</span>
-					</section>
-					<div class="links">
-						<div>
-							<a href="#">Collection</a>
-							<a href="#">History</a>
+		<div class ="row">
+			<aside class = "col-auto">
+				<h3>Browse</h3> 
+				<nav class="browse">
+					<ul class="main">
+						<li><a class="heavy" href="#">Heavy Rotation</a></li>
+						<li><a class="recent" href="#">Recent Activity</a></li>
+						<li><a class="top" href="#">Top Charts</a></li>
+						<li><a class="new" href="#">New Releases</a></li>
+					</ul>
+				</nav>
+				<h3>Your music</h3> 
+				<nav class="music">
+					<ul class="main">
+						<li><a class="collection" href="#">Collection</a></li>
+						<li><a class="history" href="#">History</a></li>
+					</ul>
+				</nav>
+			</aside>
+	
+			<main class = "col">
+				<header>
+					<div class="name-photo">
+						<aside>
+							<img src="img/artist.png" />
+						</aside>
+						<div class="name">
+							<h1>Luke Chesser</h1>
+							<p>Montreal, Quebec, Canada <a href="https://www.facebook.com/" target="_blank"><img class="share" src="img/icon/fb.png" /></a><a href="https://twitter.com/" target="_blank"><img class="share" src="img/icon/twitter.png" /></a></p>
 						</div>
 					</div>
+					<div class="stats-links">
+						<section class="stats">
+							<span>2 Playlists</span>
+							<span>4 Reviews</span>
+							<span>6 Followers</span>
+							<span>13 Following</span>
+						</section>
+						<div class="links">
+							<div>
+								<a href="#">Collection</a>
+								<a href="#">History</a>
+							</div>
+						</div>
+					</div>
+				</header>
+				<h2>Top Album</h2>
+				<div>
+					<a class="station" href="#">Start Station</a>
 				</div>
-			</header>
-			<h2>Top Album</h2>
-			<div>
-				<a class="station" href="#">Start Station</a>
-			</div>
-			<section id="albums">
-				<article>
-					<figure>
-						<img src="img/album/album_01.png" />
-						<figcaption>Native (Deluxe)</figcaption>
-					</figure>
-					<div class="artist">OneRepublic</div>
-					<div class="count">17 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_02.png" />
-						<figcaption>Wax Wings</figcaption>
-					</figure>
-					<div class="artist">Joshua Radin</div>
-					<div class="count">11 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_03.png" />
-						<figcaption>Modern Vampires of th...</figcaption>
-					</figure>
-					<div class="artist">Vampire Weekend</div>
-					<div class="count">12 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_04.png" />
-						<figcaption>Night Visions</figcaption>
-					</figure>
-					<div class="artist">Imagine Dragons</div>
-					<div class="count">11 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_05.png" />
-						<figcaption>Trouble Will Find Me</figcaption>
-					</figure>
-					<div class="artist">The National</div>
-					<div class="count">13 songs <span class="explicit">EXPLICIT</span></div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_06.png" />
-						<figcaption>Native (Deluxe)</figcaption>
-					</figure>
-					<div class="artist">OneRepublic</div>
-					<div class="count">17 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_07.png" />
-						<figcaption>Wax Wings</figcaption>
-					</figure>
-					<div class="artist">Joshua Radin</div>
-					<div class="count">11 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_08.png" />
-						<figcaption>Modern Vampires of th...</figcaption>
-					</figure>
-					<div class="artist">Vampire Weekend</div>
-					<div class="count">12 songs</div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_09.png" />
-						<figcaption>Night Visions</figcaption>
-					</figure>
-					<div class="artist">Imagine Dragons</div>
-					<div class="count">11 songs <span class="explicit">EXPLICIT</span></div>
-				</article>
-				<article>
-					<figure>
-						<img src="img/album/album_10.png" />
-						<figcaption>Trouble Will Find Me</figcaption>
-					</figure>
-					<div class="artist">The National</div>
-					<div class="count">13 songs</div>
-				</article>
-			</section>
-		</main>
+				<section id="albums">
+					<article>
+						<figure>
+							<img src="img/album/album_01.png" />
+							<figcaption>Native (Deluxe)</figcaption>
+						</figure>
+						<div class="artist">OneRepublic</div>
+						<div class="count">17 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_02.png" />
+							<figcaption>Wax Wings</figcaption>
+						</figure>
+						<div class="artist">Joshua Radin</div>
+						<div class="count">11 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_03.png" />
+							<figcaption>Modern Vampires of th...</figcaption>
+						</figure>
+						<div class="artist">Vampire Weekend</div>
+						<div class="count">12 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_04.png" />
+							<figcaption>Night Visions</figcaption>
+						</figure>
+						<div class="artist">Imagine Dragons</div>
+						<div class="count">11 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_05.png" />
+							<figcaption>Trouble Will Find Me</figcaption>
+						</figure>
+						<div class="artist">The National</div>
+						<div class="count">13 songs <span class="explicit">EXPLICIT</span></div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_06.png" />
+							<figcaption>Native (Deluxe)</figcaption>
+						</figure>
+						<div class="artist">OneRepublic</div>
+						<div class="count">17 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_07.png" />
+							<figcaption>Wax Wings</figcaption>
+						</figure>
+						<div class="artist">Joshua Radin</div>
+						<div class="count">11 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_08.png" />
+							<figcaption>Modern Vampires of th...</figcaption>
+						</figure>
+						<div class="artist">Vampire Weekend</div>
+						<div class="count">12 songs</div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_09.png" />
+							<figcaption>Night Visions</figcaption>
+						</figure>
+						<div class="artist">Imagine Dragons</div>
+						<div class="count">11 songs <span class="explicit">EXPLICIT</span></div>
+					</article>
+					<article>
+						<figure>
+							<img src="img/album/album_10.png" />
+							<figcaption>Trouble Will Find Me</figcaption>
+						</figure>
+						<div class="artist">The National</div>
+						<div class="count">13 songs</div>
+					</article>
+				</section>
+			</main>
+		</div>
+		
 	</body>
 </html>
